--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,8 +33,9 @@
     "react-hooks/exhaustive-deps": "off",
     "jsx-a11y/click-events-have-key-events": "warn",
     "jsx-a11y/interactive-supports-focus": "warn",
-    "prettier/prettier": "warn",
     "no-unused-vars": "off",
+    "@typescript-eslint/no-shadow": "error",
+    "prettier/prettier": ["error", {"endOfLine": "auto"}],
     "unused-imports/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "warn",
     "@typescript-eslint/no-unused-vars": [
