--- a/package.json
+++ b/package.json
@@ -24,17 +24,24 @@
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
+		"firebase": "^10.12.2",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"moment": "^2.30.1",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-hook-form": "^7.52.0",
+		"validator": "^13.12.0",
+		"zod": "^3.23.8",
+		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/validator": "^13.12.0",
 		"@typescript-eslint/eslint-plugin": "7.2.0",
 		"@typescript-eslint/parser": "7.2.0",
 		"autoprefixer": "10.4.19",
