login: enabling connection to firebase

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,9 @@
 NEWS_URL=https://newsapi.org/v2/
 NEWS_API_KEY=apikey
+FIREBASE_API_KEY=firebaseApiKey
+FIREBASE_AUTH_DOMAIN=firebaseAuthDomain
+FIREBASE_PROJECT_ID=firebaseProjectId
+FIREBASE_STORAGE_BUCKET=firebaseStorageBucket
+FIREBASE_MESSAGING_SENDER_ID=firebaseMessagingSenderId
+FIREBASE_APP_ID=firebaseAppId
+FIREBASE_MEASUREMENT_ID=firebaseMeasurementId
