--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@canvasjs/react-charts": "^1.0.2",
 		"@hookform/resolvers": "^3.6.0",
 		"@iconify/react": "^5.0.1",
 		"@nextui-org/button": "2.0.34",
@@ -25,7 +26,10 @@
 		"@nextui-org/theme": "2.2.5",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"ag-charts-community": "^9.3.1",
+		"ag-charts-react": "^9.3.1",
 		"axios": "^1.7.2",
+		"chartjs-plugin-datalabels": "^2.2.0",
 		"clsx": "2.1.1",
 		"firebase": "^10.12.2",
 		"firebase-admin": "^12.2.0",
@@ -36,6 +40,7 @@
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.52.0",
 		"validator": "^13.12.0",
